<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_ValveConfig" Id="{14483c51-273b-444b-831a-a0b360b4d740}">
    <Declaration><![CDATA[TYPE ST_ValveConfig :
STRUCT
	Position1 		: BOOL;  // Posicao 1 da valvula
    Position2 		: BOOL;  // Posicao 2 da valvula
    Position3 		: BOOL;  // Posicao 3 da valvula
    Position4 		: BOOL;  // Posicao 4 da valvula
    Position5 		: BOOL;  // Posicao 5 da valvula (usada para teste de vazamento)
    Position6 		: BOOL;  // Posicao 6 da valvula
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>